--- a/news-homepage-main/index.html
+++ b/news-homepage-main/index.html
@@ -22,7 +22,7 @@
     <div class="flex w-screen justify-between items-center px-4">
 
       <span class="text-6xl font-extrabold">W.</span>
-      <button class="fixed sm:hidden w-10 h-10 bg-cover  bg-no-repeat bg-[url('/assets/images/icon-menu.svg')] top-9 right-5 max-sm:z-10 " id="btn"></button>
+      <button class="fixed sm:hidden w-10 h-10 bg-cover  bg-no-repeat bg-[url('/assets/images/icon-menu.svg')]  right-5 max-sm:z-10 " id="btn"></button>
     </div>
     <ul class="sm:flex  sm:z-50 justify-evenly items-center hide-links  " id="links">
       <li class="p-5 hover:text-orange-400"><a href="/">Home</a> </li>
@@ -43,7 +43,7 @@
     <div class="sm:row-start-1 sm:row-end-4 sm:col-start-3 flex flex-col justify-evenly h-full px-4 bg-black text-white order-3" id="new-content">
       <div class="">
         
-        <h2 class="text-4xl font-bold pb-12 text-orange-300  ">New</h2>
+        <h2 class="text-4xl font-bold pb-12 text-orange-300 pt-4 ">New</h2>
         <h3 class="text-2xl font-bold hover:text-orange-300 cursor-pointer">Hydrogen VS Electric Cars</h3>
         <p class="text-gray-400">Will hydrogen-fueled cars ever catch up to EVs?</p>
         <span class=" w-full h-[1px] block bg-gray-400 relative mt-5 z-[-1]"></span>
@@ -66,9 +66,9 @@
   <h1 class="text-5xl xl:text-6xl font-extrabold">The Bright Future of Web 3.0?</h1>
   
   <div class="">
-    <p class="text-gray-500">We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. 
+    <p class="text-gray-500" id="p-more">We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. 
       But is it really fulfilling its promise?</p>
-      <button class="w-36  h-10 bg-red-400 hover:bg-black uppercase mt-7 text-white tracking-widest">read more</button>
+      <button class="w-36  h-10 bg-red-400 hover:bg-black uppercase mt-7 text-white tracking-widest" id="read-more">read more</button>
     </div>
     
     <!-- box 01 start -->
