--- a/Main_app/index.html
+++ b/Main_app/index.html
@@ -36,10 +36,10 @@
         </nav>
 
         <div class="follow">
-            <a href="#" class="fab fa-facebook-f"></a>
-            <a href="#" class="fab fa-twitter"></a>
-            <a href="#" class="fab fa-instagram"></a>
-            <a href="#" class="fab fa-linkedin"></a>
+            <!-- <a href="#" class="fab fa-facebook-f"></a>
+            <a href="#" class="fab fa-twitter"></a> -->
+            <a href="https://github.com/Prabhjeet-Singh" class="fab fa-github"></a>
+            <a href="https://www.linkedin.com/in/prabhjeet-singh-7bbb8022a/" class="fab fa-linkedin"></a>
 
         </div>
 
@@ -54,14 +54,14 @@
             <span class="hi">hi there...</span>
             <h3>i am <span>Prabhjeet Singh</span></h3>
             <p class="info">i am a front-end developer</p>
-            <p class="text"> Creative and forward-thinking front-end web developer creates cutting-edge websites and applications for high-profile clients with challenging demands and visions. Skilled project manager, team leader and analytical problem-solver with top-notch organizational, scheduling and code verification skills. Expertise in html, css,js and Reactjs languages.Using Git,Github,API and Vs Code (IDE).
+            <p class="text"> Creative and forward-thinking front-end web developer creates cutting-edge websites and applications for high-profile clients with challenging demands and visions. Skilled project manager, team leader and analytical problem-solver with top-notch organizational, scheduling and code verification skills. Expertise in html, CSS, TailwindCSS, JavaScript, Redux.js and Reactjs .Using Git,Github,API and Vs Code (IDE).
             </p>
             <a href="#about" class="btn">about me</a>
 
         </div>
 
         <div class="image">
-            <img src="images/person.png" alt="here is me">
+            <img src="images/front2.png" alt="here is me">
         </div>
 
 
@@ -75,7 +75,7 @@
         <h1 class="heading">about <span>me</span></h1>
         <div class="row-1">
             <div class="image">
-                <img src="images/person.png" alt="">
+                <img src="images/prabhImg.jpeg" alt="person">
             </div>
             <div class="content">
                 <h3>my name is prabhjeet singh & I am a front-end developer </h3>
@@ -94,8 +94,8 @@
                         <p><span>country:</span>Canada</p>
                     </div>
                 </div>
-                <a href="#" class="btn">download CV</a>
-                <a href="#" class="btn">hire me </a>
+                <a href="file/resume.pdf" class="btn" download>download CV</a>
+                <!-- <a href="#" class="btn">hire me </a> -->
             </div>
         </div>
         <h1 class="heading"><span>my</span> skills</h1>
@@ -110,7 +110,7 @@
                     <div class="bar"><span></span></div>
                 </div>
                 <div class="progress">
-                    <h3> Javascript <span> 75% </span></h3>
+                    <h3> Javascript <span> 85% </span></h3>
                     <div class="bar"><span></span></div>
                 </div>
                 <div class="progress">
@@ -196,7 +196,7 @@
                 <div class="content">
                     <!-- <span> 2021 - now</span> -->
                     <h3>front-end development</h3>
-                    <p>Proficient in HTML, CSS and JavaScript, with experience in designing responsive websites using frameworks such as Bootstrap and TailwindCSS.</p>
+                    <p>Proficient in HTML, CSS , JavaScript,React.js and Redux.js with experience in designing responsive websites using frameworks such as Bootstrap and TailwindCSS.</p>
                 </div>
             </div>  
             <div class="box">
@@ -352,7 +352,7 @@
 
     <!--footer section  -->
 
-    <footer>created by <span>Mr.Prabhjeet Singh</span> |all rights are reserved!</footer>
+    <footer>created by <span>Prabhjeet Singh</span> |all rights are reserved!</footer>
 
 
 
