--- a/Main_app/index.html
+++ b/Main_app/index.html
@@ -247,7 +247,7 @@
             </div>
 
             <div class="box">
-                <img src="/images/worldCountriesname.png" alt="">
+                <img src="/images/worldCountriesname.png" alt="Countries">
                 <h3>World countries</h3>
                 <div class="icons">
                     <a href="https://worldcountriesname.netlify.app" class="fas fa-link"></a>
@@ -257,8 +257,8 @@
             </div>
 
             <div class="box">
-                <img src="/images/spaceApp.png" alt="">
-                <h3>space app</h3>
+                <img src="/images/spaceApp.png" alt="space Image">
+                <h3>space</h3>
                 <div class="icons">
                     <a href="https://awesome-spaceapp.netlify.app" class="fas fa-link"></a>
                     <a href="https://awesome-spaceapp.netlify.app" class="fas fa-share"></a>
@@ -266,17 +266,17 @@
                 </div>
             </div>
 
-            <!-- <div class="box">
-                <img src="/Main_app/images/img-4.jpg" alt="">
-                <h3>project 04</h3>
+            <div class="box">
+                <img src="/images/explore.jpeg" alt="Explore Image">
+                <h3>Explore</h3>
                 <div class="icons">
-                    <a href="#" class="fas fa-link"></a>
-                    <a href="#" class="fas fa-share"></a>
-                    <a href="#" class="fas fa-search"></a>
+                    <a href="https://meta-space1.netlify.app/" class="fas fa-link"></a>
+                    <a href="https://meta-space1.netlify.app/" class="fas fa-share"></a>
+                    <a href="https://meta-space1.netlify.app/" class="fas fa-search"></a>
                 </div>
             </div>
 
-            <div class="box">
+          <!--   <div class="box">
                 <img src="/Main_app/images/img-5.jpg" alt="">
                 <h3>project 05</h3>
                 <div class="icons">
@@ -312,14 +312,12 @@
             <div class="icons">
                 <i class="fas fa-envelope"></i>
                 <h3>my email</h3>
-                <!-- <p>Hindey91152@gmail.com</p> -->
                 <p>prabhijeetsidhu@gmail.com</p>
             </div>
             <div class="icons">
                 <i class="fas fa-phone"></i>
                 <h3>my number</h3>
                 <p>+1(705)716-1656</p>
-                <!-- <p></p> -->
             </div>
             <div class="icons">
                 <i class="fas fa-map-marked-alt"></i>
