--- a/Main_app/index.html
+++ b/Main_app/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta target="_blank" http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>personal portfolio</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
@@ -24,22 +24,22 @@
     <!-- header section start -->
 
     <header>
-        <a href="#home" class="logo"><span>Prabhjeet</span> Singh</a>
+        <a target="_blank" href="#home" class="logo"><span>Prabhjeet</span> Singh</a>
 
         <nav class="navbar">
 
-            <a href="#about">about</a>
-            <a href="#service">service</a>
-            <a href="#experience">experience</a>
-            <a href="#portfolio">portfolio</a>
-            <a href="#contact">contact</a>
+            <a target="_blank" href="#about">about</a>
+            <a target="_blank" href="#service">service</a>
+            <a target="_blank" href="#experience">experience</a>
+            <a target="_blank" href="#portfolio">portfolio</a>
+            <a target="_blank" href="#contact">contact</a>
         </nav>
 
         <div class="follow">
-            <!-- <a href="#" class="fab fa-facebook-f"></a>
-            <a href="#" class="fab fa-twitter"></a> -->
-            <a href="https://github.com/Prabhjeet-Singh" class="fab fa-github"></a>
-            <a href="https://www.linkedin.com/in/prabhjeet-singh-7bbb8022a/" class="fab fa-linkedin"></a>
+            <!-- <a target="_blank" href="#" class="fab fa-facebook-f"></a>
+            <a target="_blank" href="#" class="fab fa-twitter"></a> -->
+            <a target="_blank" href="https://github.com/Prabhjeet-Singh" class="fab fa-github"></a>
+            <a target="_blank" href="https://www.linkedin.com/in/prabhjeet-singh-7bbb8022a/" class="fab fa-linkedin"></a>
 
         </div>
 
@@ -56,7 +56,7 @@
             <p class="info">i am a front-end developer</p>
             <p class="text"> Creative and forward-thinking front-end web developer creates cutting-edge websites and applications for high-profile clients with challenging demands and visions. Skilled project manager, team leader and analytical problem-solver with top-notch organizational, scheduling and code verification skills. Expertise in html, CSS, TailwindCSS, JavaScript, Redux.js and Reactjs .Using Git,Github,API and Vs Code (IDE).
             </p>
-            <a href="#about" class="btn">about me</a>
+            <a target="_blank" href="#about" class="btn">about me</a>
 
         </div>
 
@@ -94,8 +94,8 @@
                         <p><span>country:</span>Canada</p>
                     </div>
                 </div>
-                <a href="file/resume.pdf" class="btn" download>download CV</a>
-                <!-- <a href="#" class="btn">hire me </a> -->
+                <a target="_blank" href="file/resume.pdf" class="btn" download>download CV</a>
+                <!-- <a target="_blank" href="#" class="btn">hire me </a> -->
             </div>
         </div>
         <h1 class="heading"><span>my</span> skills</h1>
@@ -240,9 +240,9 @@
                 <img src="/images/connectDots.png" alt="">
                 <h3>Connect dots</h3>
                 <div class="icons">
-                    <a href="https://connectdots.netlify.app" class="fas fa-link"></a>
-                    <a href="https://connectdots.netlify.app" class="fas fa-share"></a>
-                    <a href="https://connectdots.netlify.app" class="fas fa-search"></a>
+                    <a target="_blank" href="https://connectdots.netlify.app" class="fas fa-link"></a>
+                    <a target="_blank" href="https://connectdots.netlify.app" class="fas fa-share"></a>
+                    <a target="_blank" href="https://connectdots.netlify.app" class="fas fa-search"></a>
                 </div>
             </div>
 
@@ -250,9 +250,9 @@
                 <img src="/images/worldCountriesname.png" alt="Countries">
                 <h3>World countries</h3>
                 <div class="icons">
-                    <a href="https://worldcountriesname.netlify.app" class="fas fa-link"></a>
-                    <a href="https://worldcountriesname.netlify.app" class="fas fa-share"></a>
-                    <a href="https://worldcountriesname.netlify.app" class="fas fa-search"></a>
+                    <a target="_blank" href="https://worldcountriesname.netlify.app" class="fas fa-link"></a>
+                    <a target="_blank" href="https://worldcountriesname.netlify.app" class="fas fa-share"></a>
+                    <a target="_blank" href="https://worldcountriesname.netlify.app" class="fas fa-search"></a>
                 </div>
             </div>
 
@@ -260,9 +260,9 @@
                 <img src="/images/spaceApp.png" alt="space Image">
                 <h3>space</h3>
                 <div class="icons">
-                    <a href="https://awesome-spaceapp.netlify.app" class="fas fa-link"></a>
-                    <a href="https://awesome-spaceapp.netlify.app" class="fas fa-share"></a>
-                    <a href="https://awesome-spaceapp.netlify.app" class="fas fa-search"></a>
+                    <a target="_blank" href="https://awesome-spaceapp.netlify.app" class="fas fa-link"></a>
+                    <a target="_blank" href="https://awesome-spaceapp.netlify.app" class="fas fa-share"></a>
+                    <a target="_blank" href="https://awesome-spaceapp.netlify.app" class="fas fa-search"></a>
                 </div>
             </div>
 
@@ -270,9 +270,9 @@
                 <img src="/images/explore.jpeg" alt="Explore Image">
                 <h3>Explore</h3>
                 <div class="icons">
-                    <a href="https://meta-space1.netlify.app/" class="fas fa-link"></a>
-                    <a href="https://meta-space1.netlify.app/" class="fas fa-share"></a>
-                    <a href="https://meta-space1.netlify.app/" class="fas fa-search"></a>
+                    <a target="_blank" href="https://meta-space1.netlify.app/" class="fas fa-link"></a>
+                    <a target="_blank" href="https://meta-space1.netlify.app/" class="fas fa-share"></a>
+                    <a target="_blank" href="https://meta-space1.netlify.app/" class="fas fa-search"></a>
                 </div>
             </div>
 
@@ -280,9 +280,9 @@
                 <img src="/Main_app/images/img-5.jpg" alt="">
                 <h3>project 05</h3>
                 <div class="icons">
-                    <a href="#" class="fas fa-link"></a>
-                    <a href="#" class="fas fa-share"></a>
-                    <a href="#" class="fas fa-search"></a>
+                    <a target="_blank" href="#" class="fas fa-link"></a>
+                    <a target="_blank" href="#" class="fas fa-share"></a>
+                    <a target="_blank" href="#" class="fas fa-search"></a>
                 </div>
             </div>
 
@@ -290,10 +290,10 @@
                 <img src="/Main_app/images/img-6.jpg" alt="">
                 <h3>project 06</h3>
                 <div class="icons">
-                    <a href="#" class="fas fa-link"></a>
-                    <a href="#" class="fas fa-share"></a>
+                    <a target="_blank" href="#" class="fas fa-link"></a>
+                    <a target="_blank" href="#" class="fas fa-share"></a>
                     
-                    <a href="#" class="fas fa-search"></a>
+                    <a target="_blank" href="#" class="fas fa-search"></a>
                 </div>
             </div> -->
         </div>
