--- a/Main_app/index.html
+++ b/Main_app/index.html
@@ -28,11 +28,11 @@
 
         <nav class="navbar">
 
-            <a target="_blank" href="#about">about</a>
-            <a target="_blank" href="#service">service</a>
-            <a target="_blank" href="#experience">experience</a>
-            <a target="_blank" href="#portfolio">portfolio</a>
-            <a target="_blank" href="#contact">contact</a>
+            <a  href="#about">about</a>
+            <a  href="#service">service</a>
+            <a  href="#experience">experience</a>
+            <a  href="#portfolio">portfolio</a>
+            <a  href="#contact">contact</a>
         </nav>
 
         <div class="follow">
