changing photo -main

--- a/Main_app/index.html
+++ b/Main_app/index.html
@@ -194,17 +194,19 @@
 
             <div class="box">
                 <div class="content">
-                    <!-- <span> 2021 - now</span> -->
-                    <h3>front-end development</h3>
-                    <p>Proficient in HTML, CSS , JavaScript,React.js and Redux.js with experience in designing responsive websites using frameworks such as Bootstrap and TailwindCSS.</p>
+                    <span> Feb2022 - July2022</span>
+                    <h3>web development Intern</h3>
+                 
+                    <p>During my Web Developer Internship at Info WebSolutions (02/2022 - 07/2022), I honed my skills in HTML, CSS, and JavaScript while mastering frameworks like ReactJS, TailwindCSS, and Bootstrap. I excelled in crafting responsive, user-friendly interfaces and integrating REST APIs for dynamic functionality. My client-centric approach, dedication, and problem-solving ability garnered positive feedback. Quality always took precedence over quantity in my work. I'm committed to continuous learning, engaging in online courses and web development communities to stay updated and grow.</p>
                 </div>
             </div>  
             <div class="box">
                 <div class="content">
                     <!-- <span> 2016 -2017</span> -->
                     <h3>front-end development</h3>
-                    <p>
-                        Experience in building web applications using ReactJS and familiar with RESTful APIs. Strong understanding of browser developer tools and debugging techniques.</p>
+                    <p>My expertise also extends to browser developer tools and debugging techniques. I am skilled in utilizing these tools effectively to diagnose and resolve issues, ensuring a smooth and error-free user experience on websites and web applications.
+
+                        In summary, my skill set encompasses a comprehensive understanding of web development, from front-end technologies like HTML, CSS, and JavaScript to powerful frameworks like React.js and Redux.js. I am adept at responsive design, API integration, and proficiently troubleshooting web-related challenges.</p>
                 </div>
             </div>
             <div class="box">
@@ -218,7 +220,7 @@
                 <div class="content">
                     <!-- <span> 2018 -2019</span> -->
                     <h3>Programming</h3>
-                    <p>Experience in C and Java programming languages and I am able to take a project from concept to completion, ensuring that the final product is visually appealing, functional and meets client requirements.</p>
+                    <p>I have a solid background in programming languages such as C and Java, which expands my capabilities beyond web development. With these programming skills, I am adept at taking a project from its initial concept to a successful completion. My approach ensures that the final product not only meets but often exceeds client expectations.I prioritize creating solutions that are not only functionally robust but also visually appealing. </p>
                 </div>
             </div>
        
