--- a/rahul_web/index.html
+++ b/rahul_web/index.html
@@ -11,9 +11,9 @@
     <title>Document</title>
 </head>
 
-<body>
+<body class="">
     <!-- section 1 -->
-    <div class="flex h-screen  bg-img bg-cover  justify-evenly items-end pb-10  ">
+    <div class="flex h-screen  bg-img bg-cover  justify-evenly items-end pb-10 bg-blue-500 ">
         <h1 class=" text-white capitalize font-extrabold lg:text-8xl max-w-xl md:text-4xl">Creative-thinking for businesses</h1>
         <p class="  text-white uppercase lg:text-2xl max-w-xl md:text-xl">Impossible is just a big word thrown around by small men who
             find it easier to live in the world they’ve been given, than to explore the power they have to change it.
@@ -23,7 +23,7 @@
     <!-- section 1 end -->
     <!-- section 2 start -->
     <div class="grid place-content-evenly justify-items-center bg-yellow-500 min-h-screen relative">
-        <img src="./images/r3.jpg" alt="person1" class="w-64 h-64 rounded-full border-[1rem] border-red-500 bg-cover ">
+        <img src="./images/img1.jpeg" alt="person1" class="w-64 h-64 rounded-full border-[1rem] border-red-500 bg-cover ">
         <p class="w-[29rem] h-32 border-l-8 border-l-red-500 pl-7">Professional designer combines his photography degree
             with his marketing degree to find the right balance between creativity and commercial sense. Vincent is an
             experienced all round photographer and moved to Stirling at the end of 2017.</p>
